--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,27 @@
+old/
+*.sqlite
+*.html
 *.json
 *.json.gz
+
+*.o
+*.a
+*.pyc
+#*#
+*~
+*.swp
+.*
+*.tmp
+*.old
+*.profile
+*.bkp
+*.bak
+[Tt]humbs.db
+*.DS_Store
+build/
+_build/
+src/build/
+*.log
+
+# Don't ignore this file itself
+!.gitignore
