update test/lint scope

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,7 @@
 [pytest]
 
+norecursedirs = extra old
+
 # search for 'test_*' functions in all python files, not just under tests
 python_files = test_*.py tests/*.py chocula/*.py bin/*.py
 
