--- a/sources.toml
+++ b/sources.toml
@@ -128,3 +128,7 @@ filename = "homepage_status.json"
 date = "2020-06-03"
 filename = "container_stats.json"
 
+[manual_homepages]
+date = "2020-05-05"
+filename = "manual_longtail_homepages.tsv"
+mirror_url = "https://archive.org/download/chocula-manual-hompages"
