--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,7 @@
-image: debian:buster
+image: debian:bullseye
 before_script:
   - apt update -qy
-  - apt install -y python3-pip python3-wheel python3.7 python3.7-dev python3.7-venv python3.7-distutils python3-pytest git make
-  - pip3 install pipenv
+  - apt install -y python3-wheel python3.8 python3.8-dev python3.8-venv python3.8-distutils python3-pytest git make pipenv
   - pipenv --version
 
 variables:
