--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: debian:bullseye
 before_script:
   - apt update -qy
-  - apt install -y python3-wheel python3.8 python3.8-dev python3.8-venv python3.8-distutils python3-pytest git make pipenv
+  - apt install -y --no-install-recommends python3-wheel python3.8 python3.8-venv python3.8-distutils python3-pytest git make pipenv
   - pipenv --version
 
 variables:
