--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,10 @@ before_script:
 variables:
   LC_ALL: "C.UTF-8"
   LANG: "C.UTF-8"
+  PIPENV_VENV_IN_PROJECT: "true"
 
 test_python:
   script:
     - pipenv install --dev --deploy
-    - pipenv run make test
+    - make test
+    - make lint
